@@ -1,6 +1,16 @@
 v3.9.0 (XXXX-XX-XX)
 -------------------
 
+* DEVSUP-899: Fixed Subquery execution in a very rare case a subquery, nested in
+  another subquery, was not executed, which is fixed now.
+  Technical details:
+  If we have two subqueries: `Outer` and `Nested` the Outer will define the
+  input for Nested. And Outer has the pattern: 1 input, subqueryDone, 1 input,
+  subqueryDone [...] and our internal batching did cut a batch like this:
+  [<...>, input (A)] | [subqueryDone, input (B), subqueryDone, <...>] than
+  Nested on input (B) was not executed. As soon as we have more than 1 input per
+  Outer, or a different cutting position, all was good.
+
 * When enabling the cluster supervision maintenance mode via the web UI, there
   is now the possibility to select a duration for the maintenance mode.
   Previous versions of ArangoDB always enabled the maintenance mode for one
@@ -35,6 +45,7 @@ v3.9.0 (XXXX-XX-XX)
 
 * Fixed SEARCH-260: Fix invalid sorting order of stored features in presence of
   primary sort (ArangoSearch).
+
 
 * Change error message for queries that use too much memory from "resource limit
   exceeded" to "query would use more memory than allowed".
